2005-08-08  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd_stat.c (receive_print_stats): Really print values of
	thread number, paranoia, and restart interval the server is using.

	* argp/argp-help.c: Use _IO_vasprintf instead of vasprintf.
	* include/stdio.h: Add libc_hidden_proto for __vfprintf_chk.
	* debug/vfprintf_chk.c: Add libc_hidden_def.

2005-08-08  Roland McGrath  <roland@redhat.com>

	* argp/argp-help.c (__argp_error): __asprintf -> vasprintf.
	(__argp_failure): Likewise.

2005-08-08  Ulrich Drepper  <drepper@redhat.com>

	* nscd/cache.c (cache_add): Commit hash table and header to disk.

	* nscd/mem.c (mempool_alloc): Use posix_fallocate instead of ftruncate.
	* nscd/connections.c (nscd_init): Likewise.

2005-08-08  Jakub Jelinek  <jakub@redhat.com>

	* stdio-common/fxprintf.c: Include libioP.h.

	* posix/bits/unistd.h (confstr, getgroups, ttyname_r, gethostname,
	getdomainname): Add __NTH.
	* stdlib/bits/stdlib.h (ptsname_r, wctomb, mbstowcs, wcstombs):
	Likewise.
	(realpath): Likewise.  Use __const instead of const.  Add __restrict
	keywords.
	* socket/bits/socket2.h (recvfrom): Add __restrict keyword to __buf.
	* wcsmbs/bits/wchar2.h (wmemcpy, wmemmove, wmempcpy, wmemset,
	wcscpy, wcpcpy, wcsncpy, wcpncpy, wcscat, wcsncat, vswprintf, wcrtomb,
	mbsrtowcs, wcsrtombs, mbsnrtowcs, wcsnrtombs): Add __NTH.
	* string/bits/string3.h (__memset_ichk): Likewise.
	(__memcpy_ichk, __memmove_ichk, __mempcpy_ichk, __strcpy_ichk,
	__stpcpy_ichk, __strncpy_ichk, stpncpy, __strcat_ichk,
	__strncat_ichk): Likewise.  Use __const instead of const.
	(__stpncpy_chk): Use __const instead of const.
	(__stpncpy_alias): Use __REDIRECT_NTH instead of __REDIRECT.

2005-08-08  Ulrich Drepper  <drepper@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	* nscd/mem.c (BLOCK_ALIGN_LOG, BLOCK_ALIGN, BLOCK_ALIGN_M1): Move
	definitions to...
	* nscd/nscd.h (BLOCK_ALIGN_LOG, BLOCK_ALIGN, BLOCK_ALIGN_M1): ...here.
	* nscd/connections.c (usekey): New enum.